src/components/layout.css
/* LIGHT MODE COLORS */
:root {
  --border-radius: 4px;
  --color-text: #333;
  --color-primary: #7026b9;
  --color-link: #007bff;
  --color-code-bg: #fff4db;
  --color-code: #8a6534;
  --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
  --font-mono: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
    "Courier New", monospace;
  --font-lg: 18px;
  --font-md: 16px;
  --font-sm: 14px;
  --font-sx: 12px;
  --line-height-loose: 1.75;
  --line-height-normal: 1.5;
  --line-height-dense: 1.1;
  --space-1: 4px;
  --space-2: 8px;
  --space-3: 16px;
  --space-4: 24px;
  --space-5: 32px;
  --space-6: 64px;
  --size-content: 54rem;
  --size-gutter: var(--space-5);
  --size-gap: var(--space-6);
  --color-background-light: #fff;
    --color-background: #fff;

    --fyncom-blue: #4A90E2;
    --fyncom-blue-rgb: 74, 144, 226; /* The RGB equivalent of #4A90E2 */
    --fyncom-light-blue: #13DCEC;
  --fyncom-lightest-blue: #80DED9;
  --fyncom-red: #FF5A5F;
  --fyncom-cyan: #408A97;
  --fyncom-dark-cyan: #206076;
  --fyncom-darkest-cyan: #003554;
  --fyncom-yellow: #EEE539;
  --karmacall-gold: #ff8c00;
  --karmacall-green: #008080;
  --robocash-green: #3fa060;
    --sub-color: var(--fyncom-cyan);
    --color-bar: #000;
    --help-box: #fff;
    --dropdown-container-color: var(--fyncom-lightest-blue);
    --dropdown-text-color: #000;
    --dropdown-hover-color: white;
    --button-learn-more: var(--fyncom-yellow);
    --button-learn-more-hover: var(--karmacall-gold);
    --container-color: var(--fyncom-cyan);
    --logo-dark-mode: url('../images/FynCom_Logo_New-LARGEST-White.png');
    --logo-light-mode: url('../images/FynCom_Logo_New-LARGEST.png');
    --filters-dark-mode: url('../images/fyncom-filters-white.png');
    --filters-light-mode: url('../images/fyncom-filters.png');
    --filters-gmail-dark-mode: url('../images/fyncom_filters_gmail_edition_no_logo-white.png');
    --filters-gmail-light-mode: url('../images/fyncom_filters_gmail_edition_no_logo.png');
    --karmacall-dark-mode: url('../images/karmacall-logo-white.png');
    --karmacall-light-mode: url('../images/karmacall-logo.png');
    --img-brightness: brightness(1);
    .fyncom-logo {
        content: var(--logo-light-mode);
        display: block;
        margin: 40px auto;
        max-width: 300px;
    }
    .fyncom-logo-header {
        content: var(--logo-light-mode);
        display: block;
        margin: 0px 10px;
        max-width: 100px;
    }
    .fyncom-filters-words {
        content: var(--filters-light-mode);
        margin: 1.5rem auto;
        max-width: 500px;
    }
  .fyncom-filters-gmail-edition {
        content: var(--filters-gmail-light-mode);
        margin: 1.5rem auto;
    /*min-width: 400px;*/
    /*max-width: 600px;*/
    }
  .karmacall-logo {
        content: var(--karmacall-light-mode);
        margin: 1.5rem auto;
    /*min-width: 400px;*/
    /*max-width: 600px;*/
    }
}

/* Automatically switch to dark mode based on user's system preference */
@media (prefers-color-scheme: dark) {
    :root {
        --color-text: #eaeaea;
        --color-background: #121212;
        --color-primary: #bb86fc;
        --sub-color: var(--fyncom-light-blue);
        --color-bar: #fff;
        --help-box: #000;
        --dropdown-container-color: var(--fyncom-darkest-cyan);
        --dropdown-text-color: #fff;
        --dropdown-hover-color: #000;
        --button-learn-more: var(--fyncom-blue);
        --button-learn-more-hover: var(--fyncom-cyan);
        --container-color: var(--fyncom-darkest-cyan);
        --img-brightness: brightness(0.7);
        .fyncom-logo {
            content: var(--logo-dark-mode);
            display: block;
            margin: 40px auto;
            max-width: 300px;
        }
        .fyncom-logo-header {
            content: var(--logo-dark-mode);
            display: block;
            margin: 0px 10px;
            max-width: 100px;
        }
        .fyncom-filters-words {
            content: var(--filters-dark-mode);
        }
      .fyncom-filters-gmail-edition {
            content: var(--filters-gmail-dark-mode);
        }
      .karmacall-logo {
            content: var(--karmacall-dark-mode);
        }
    }
}

/* Manually switch to dark mode via class or data attribute */
:root[data-theme='dark'] {
    --color-text: #eaeaea;
    --color-background: #121212;
    --color-primary: #bb86fc;
    --sub-color: var(--fyncom-red);
    --color-bar: #fff;
    --help-box: #000;
    --dropdown-container-color: var(--fyncom-darkest-cyan);
    --dropdown-text-color: #fff;
    --dropdown-hover-color: #000;
    --button-learn-more: var(--fyncom-blue);
    --button-learn-more-hover: var(--fyncom-cyan);
    --container-color: var(--fyncom-dark-cyan);
    --img-brightness: brightness(0.7);
    .fyncom-logo {
        content: var(--logo-dark-mode);
        display: block;
        margin: 40px auto;
        max-width: 300px;
    }
    .fyncom-logo-header {
        content: var(--logo-dark-mode);
        display: block;
        margin: 0px 10px;
        max-width: 100px;
    }
    .fyncom-filters-words {
        content: var(--filters-dark-mode);
    }
    .fyncom-filters-gmail-edition {
      content: var(--filters-gmail-dark-mode);
    }
    .karmacall-logo {
      content: var(--karmacall-dark-mode);
    }
  }

/****** *Setting mobile device css ******/
/* Styles for tablets and above */
@media (min-width: 768px) {
    .use-case-section {
        flex-direction: row;
    }
    .use-case-description {
        width: 50%; /* Set to original width on larger screens */
    }
}
/* ... */

